# mx-send-tauri

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.legacy.js  updates.md  vite.config.ts
.github/workflows/: release.yml
public/: settings.json
public/favicon/: site.webmanifest
src/: App.tsx  index.css  main.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json  upload.db
src-tauri/icons/: icon.icns
src-tauri/src/: axum.rs  commands.rs  file_types.rs  handler.rs  lib.rs  main.rs  utils.rs  websocket.rs
src/components/page-layouts/: ActionBtns.tsx  AppHeader.tsx  AppNavItem.tsx  AppNavigation.tsx  AppWrapper.tsx  QrCodeDisplay.tsx  QrScanner.tsx  Search.tsx
src/components/reusable-components/: Button.tsx  ImageGridItem.tsx  LoaderRoller.tsx  SettingsReusable.tsx
src/components/tab-components/: AudioTab.tsx  DocumentTab.tsx  ImageFiles.tsx  ImagePrev.tsx  ImageTab.tsx  InternalStorageTab.tsx  MediaFolders.tsx  SettingsTab.tsx  Tab.tsx  TabFilesWrapper.tsx  TabLayout.tsx  TabListItem.tsx  TabLoader.tsx  TransferHistoryTab.tsx  TransferTab.tsx  VideoTab.tsx
src/hooks/: useGetFiles.ts  useSelectFile.ts  useSendFiles.ts  useWebsocket.ts
src/store-slices/: AllFilesSlice.ts  activeTabs.ts  allFilesSlice.ts  appSession.ts  connectionSlice.ts  settingsSlice.ts  windowSizeSlice.ts
src/types/: activeTab.ts  connection.ts  files.ts  index.ts  jsonDb.ts  ui.ts
src/utils/: file-utils.ts  queue.ts
