[package]
name = "mx-send-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mx_send_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = "0.21"
futures-util = "0.3"
axum = "0.8.8"
tokio = { version = "1.51.0", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.18"
uuid = { version = "1.23.0", features = ["v4"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors"] }

