[package]
name = "mxsend"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mx_send_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = "0.21"
futures-util = "0.3"
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.51.0", features = ["io-std", "io-util", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.18", features = ["io"] }
uuid = { version = "1.23.0", features = ["v4"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
local-ip-address = "0.6.11"
walkdir = "2.5.0"
socketioxide = "0.18.3"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }
async-stream = "0.3.6"
tauri-plugin-android-external-storage = "0.1.0"
tauri-plugin-safe-area-insets-css = "0.2.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tauri-plugin-log = "2.8.0"

